tests/ui/layout/unknown-when-ptr-metadata-is-DST.stderr
error[E0277]: the trait bound `str: Copy` is not satisfied
  --> $DIR/unknown-when-ptr-metadata-is-DST.rs:6:28
   |
LL |     str: std::ptr::Pointee<Metadata = str>,
   |                            ^^^^^^^^^^^^^^ the trait `Copy` is not implemented for `str`

error[E0080]: entering unreachable code
  --> $DIR/unknown-when-ptr-metadata-is-DST.rs:10:10
   |
LL |     [(); { let _a: Option<&str> = None; 0 }];
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `return_str::{constant#0}` failed here

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0080, E0277.
For more information about an error, try `rustc --explain E0080`.
